--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
@@ -15,20 +15,20 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
-  <br />
-  <ul class="menu">
-    <li><a href="DemoPages/A01HelloWorld.html">A01_HelloWorld</a></li>
-    <li><a href="DemoPages/A02MyHTMLFile.html">A02MyHTMLFile</a></li>
-  </ul>
     <ul class="menu">
-    <li><a href="DemoPages/B01PhoneListControllers.html">B01_PhoneListControllers</a></li>
-    <li><a href="DemoPages/B02Test01.html">B02_Test01</a></li>
-    <li><a href="DemoPages/B03AeroDiv.html.html">B03_AeroDiv</a></li> 
-  </ul>
+        <li><a href="#/view1">view1</a></li>
+        <li><a href="#/view2">view2</a></li>
+    </ul>
+    <br />
+    <ul class="menu">
+        <li><a href="DemoPages/A01HelloWorld.html">A01_HelloWorld</a></li>
+        <li><a href="DemoPages/A02MyHTMLFile.html">A02MyHTMLFile</a></li>
+    </ul>
+    <ul class="menu">
+        <li><a href="DemoPages/B01PhoneListControllers.html">B01_PhoneListControllers</a></li>
+        <li><a href="DemoPages/B02Test01.html">B02_Test01</a></li>
+        <li><a href="DemoPages/B03AeroDiv.html.html">B03_AeroDiv</a></li>
+    </ul>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -49,6 +49,5 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
-  <script src="Lib/angular-1.3.5/angular.min.js"></script>
 </body>
 </html>
