--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
     <ul class="menu">
         <li><a href="DemoPages/B01PhoneListControllers.html">B01_PhoneListControllers</a></li>
         <li><a href="DemoPages/B02Test01.html">B02_Test01</a></li>
-        <li><a href="DemoPages/B03AeroDiv.html.html">B03_AeroDiv</a></li>
+        <li><a href="DemoPages/B03AeroDiv.html">B03_AeroDiv</a></li>
+        <li><a href="DemoPages/B05MovableElement.html">B05_MovableElement</a></li>
     </ul>
 
   <!--[if lt IE 7]>
