--- a/app/index.html
+++ b/app/index.html
@@ -26,9 +26,10 @@
     </ul>
     <ul class="menu">
         <li><a href="DemoPages/B01PhoneListControllers.html">B01_PhoneListControllers</a></li>
-        <li><a href="DemoPages/B02Test01.html">B02_Test01</a></li>
-        <li><a href="DemoPages/B03AeroDiv.html">B03_AeroDiv</a></li>
-        <li><a href="DemoPages/B05MovableElement.html">B05_MovableElement</a></li>
+        <li><a href="DemoPages/B04DependecyInjection.html">B04_DependecyInjection</a></li>
+        <li><a href="DemoPages/C01AeroDiv.html">C01_AeroDiv</a></li>
+        <li><a href="DemoPages/C02Test01.html">C02_Test01</a></li>
+        <li><a href="DemoPages/C04MovableElement.html">C04_MovableElement</a></li>
     </ul>
 
   <!--[if lt IE 7]>
