--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,11 @@
     </ul>
     <ul class="menu">
         <li><a href="DemoPages/B01PhoneListControllers.html">B01_PhoneListControllers</a></li>
+        <li><a href="DemoPages/B03IteratorAndFilter.html">B03_IteratorAndFilter</a></li>
+        <li><a href="DemoPages/B03IteratorAndSorter.html">B03_IteratorAndSorter</a></li>
         <li><a href="DemoPages/B04DependecyInjection.html">B04_DependecyInjection</a></li>
+    </ul>
+    <ul class="menu">
         <li><a href="DemoPages/C01AeroDiv.html">C01_AeroDiv</a></li>
         <li><a href="DemoPages/C02Test01.html">C02_Test01</a></li>
         <li><a href="DemoPages/C04MovableElement.html">C04_MovableElement</a></li>
